Avance en tests unitaires, implementation initial d'information locale

--- a/Streaming/templates/html/index.html
+++ b/Streaming/templates/html/index.html
@@ -35,7 +35,7 @@
 							<li><a class="dropdown-item" href="#">Profile</a></li>
 							<li><a class="dropdown-item" href="#">Configuration</a></li>
 							<li><hr class="dropdown-divider"></li>
-							<li><a class="dropdown-item" href="#">Se déconnerter</a></li>
+							<li><a class="dropdown-item" href="{% url 'home:home' %}">Se déconnerter</a></li>
 						</ul>
 					</li>
 				</ul>
