--- a/Streaming/home/templates/principal.html
+++ b/Streaming/home/templates/principal.html
@@ -32,9 +32,9 @@
             </tr>
             </tbody>
         </table>
-        <button class="btn btn-primary">Créer un client</button>
-        <button class="btn btn-primary">Modifier un client sélectionné</button>
-        <button class="btn btn-danger">Supprimer un client sélectionné</button>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createClientModal">Créer un client</button>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modifyClientModal">Modifier un client sélectionné</button>
+        <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteClientModal">Supprimer un client sélectionné</button>
     </div>
 
 </div>
@@ -65,16 +65,198 @@
             </tr>
             </tbody>
         </table>
-        <button class="btn btn-primary">Ajouter un film</button>
-        <button class="btn btn-primary">Modifier un film sélectionné</button>
-        <button class="btn btn-danger">Supprimer un film sélectionné</button>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createFilmModal">Ajouter un film</button>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modifyFilmModal">Modifier un film sélectionné</button>
+        <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteFilmModal">Supprimer un film sélectionné</button>
     </div>
 
 </div>
 
-<div class="row mt-3">
-    <div class="col">
-        <button class="btn btn-danger">Se déconnecter</button>
+
+<!-- Créer modals de clients -->
+<div class="modal fade" id="createClientModal" tabindex="-1" aria-labelledby="createClientModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="createClientModalLabel">Créer client</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="mb-3">
+                        <label for="clientFirstName" class="form-label">Prénom</label>
+                        <input type="text" class="form-control" id="clientFirstName" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="clientLastName" class="form-label">Nom</label>
+                        <input type="text" class="form-control" id="clientLastName" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="clientEmail" class="form-label">Courriel</label>
+                        <input type="email" class="form-control" id="clientEmail" aria-describedby="emailHelp" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="clientPassword" class="form-label">Mot de passe</label>
+                        <input type="password" class="form-control" id="clientPassword" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="clientPasswordConfirmation" class="form-label">Confirmer mot de passe</label>
+                        <input type="password" class="form-control" id="clientPasswordConfirmation" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Create</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="modal fade" id="modifyClientModal" tabindex="-1" aria-labelledby="modifyClientModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modifyClientModalLabel">Modify Client</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="mb-3">
+                        <label for="modifiedClientFirstName" class="form-label">First Name</label>
+                        <input type="text" class="form-control" id="modifiedClientFirstName" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="modifiedClientLastName" class="form-label">Last Name</label>
+                        <input type="text" class="form-control" id="modifiedClientLastName" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="modifiedClientEmail" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="modifiedClientEmail" aria-describedby="emailHelp" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="modifiedClientPassword" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="modifiedClientPassword" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="clientPasswordConfirmationConfirmation" class="form-label">Confirmer mot de passe</label>
+                        <input type="password" class="form-control" id="clientPasswordConfirmationConfirmation" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Save Changes</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="modal fade" id="deleteClientModal" tabindex="-1" aria-labelledby="deleteClientModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteClientModalLabel">Delete Client</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to delete this client?</p>
+                <form method="POST" action="#">
+                    {% csrf_token %}
+                    <input type="hidden" name="client_id" id="delete-client-id">
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Créer modals de Films -->
+<div class="modal fade" id="createFilmModal" tabindex="-1" aria-labelledby="createFilmModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="createFilmModalLabel">Create Film</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="mb-3">
+                        <label for="FilmFirstName" class="form-label">Nom</label>
+                        <input type="text" class="form-control" id="FilmFirstName" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="FilmLastName" class="form-label">Durée</label>
+                        <input type="number" class="form-control" id="FilmLastName" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="Categories" class="form-label">Catégories (separer avec ,)</label>
+                        <input type="email" class="form-control" id="Categories" aria-describedby="emailHelp" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="Actors" class="form-label">Acteurs (separer avec ,)</label>
+                        <input type="text" class="form-control" id="Actors" aria-describedby="emailHelp" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Create</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="modal fade" id="modifyFilmModal" tabindex="-1" aria-labelledby="modifyFilmModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modifyFilmModalLabel">Modify Film</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="mb-3">
+                        <label for="ModifyFilmFirstName" class="form-label">Nom</label>
+                        <input type="text" class="form-control" id="ModifyFilmFirstName" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="ModifyFilmLastName" class="form-label">Durée</label>
+                        <input type="number" class="form-control" id="ModifyFilmLastName" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="ModifyCategories" class="form-label">Catégories (separer avec ,)</label>
+                        <input type="email" class="form-control" id="ModifyCategories" aria-describedby="emailHelp" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="ModifyActors" class="form-label">Acteurs (separer avec ,)</label>
+                        <input type="text" class="form-control" id="ModifyActors" aria-describedby="emailHelp" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Save Changes</button>
+
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="modal fade" id="deleteFilmModal" tabindex="-1" aria-labelledby="deleteFilmModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteFilmModalLabel">Delete Film</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to delete this Film?</p>
+                <form method="POST" action="#">
+                    {% csrf_token %}
+                    <input type="hidden" name="Film_id" id="delete-Film-id">
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock contenus %}
