Tests unitaires ameliores. Validation des formulaires a terminer avant de deposer le travail

--- a/Streaming/home/templates/creation.html
+++ b/Streaming/home/templates/creation.html
@@ -7,30 +7,48 @@
     <div class="card-header">
         <h4 class="card-title">Créer un compte</h4>
     </div>
+    {% if errors %}
+    <div class="alert alert-danger mt-3">
+        <ul>
+            {% for error in errors %}
+            <li>{{error}}</li>
+            {% endfor %}
+        </ul>
+
+    </div>
+    {%endif%}
     <div class="card-body">
         <form method="post">
             {% csrf_token %}
             <div class="mb-3">
                 <label for="firstname" class="form-label">Prénom</label>
-                <input type="text" class="form-control" id="firstname" required>
+                <input type="text" class="form-control" id="firstname" name="firstname" required>
             </div>
             <div class="mb-3">
                 <label for="lastname" class="form-label">Nom</label>
-                <input type="text" class="form-control" id="lastname" required>
+                <input type="text" class="form-control" id="lastname" name="lastname" required>
+            </div>
+            <div class="mb-3">
+                <label for="sex" class="form-label">Sexe</label>
+                <select class="form-control" id="sex" name="sex" required>
+                    <option value="F">Femme</option>
+                    <option value="M">Homme</option>
+                    <option value="A">Autre</option>
+                </select>
             </div>
             <div class="mb-3">
                 <label for="email" class="form-label">Courriel</label>
-                <input type="email" class="form-control" id="email" required>
+                <input type="email" class="form-control" id="email" name="email" required>
                 <div class="invalid-feedback">Veuillez entrer un courriel valide.</div>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Mot de passe</label>
-                <input type="password" class="form-control" id="password" minlength="8" required>
+                <input type="password" class="form-control" id="password" name="password" minlength="8" required>
                 <div class="invalid-feedback">Le mot de passe doit contenir au moins 8 caractères.</div>
             </div>
             <div class="mb-3">
                 <label for="confirm-password" class="form-label">Confirmez le mot de passe</label>
-                <input type="password" class="form-control" id="confirm-password" required>
+                <input type="password" class="form-control" id="confirm-password" name="confirm-password" required>
                 <div class="invalid-feedback">Veuillez entrer un mot de passe identique.</div>
             </div>
             <div class="mb-3">
