--- a/Streaming/home/templates/login.html
+++ b/Streaming/home/templates/login.html
@@ -3,18 +3,28 @@
 
 {% block contenus %}
 <h1>Login</h1>
+{% if errors %}
+<div class="alert alert-danger mt-3">
+    <ul>
+        {% for error in errors %}
+            <li>{{error}}</li>
+        {% endfor %}
+    </ul>
+
+</div>
+{%endif%}
 <form method="post">
     {% csrf_token %}
     <div class="mb-3">
         <label for="username" class="form-label">Username</label>
-        <input type="text" class="form-control" id="username" required>
+        <input type="text" class="form-control" id="username" name="username" required>
     </div>
     <div class="mb-3">
         <label for="password" class="form-label">Password</label>
-        <input type="password" class="form-control" id="password" required>
+        <input type="password" class="form-control" id="password" name="password" required>
     </div>
     <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="remember-me">
+        <input type="checkbox" class="form-check-input" id="remember-me" name="remember-me">
         <label class="form-check-label" for="remember-me">Remember me</label>
     </div>
     <input type="submit" class="btn btn-primary" value="Login">
