Regroupement 3 pret a presenter

--- a/Streaming/home/templates/creation.html
+++ b/Streaming/home/templates/creation.html
@@ -52,6 +52,13 @@
                 <div class="invalid-feedback">Veuillez entrer un mot de passe identique.</div>
             </div>
             <div class="mb-3">
+                <label for="typeacces" class="form-label">Type d'accés</label>
+                <select class="form-control" id="typeacces" name="typeacces" required>
+                    <option value="0">Complet</option>
+                    <option value="1">Lecture seulement</option>
+                </select>
+            </div>
+            <div class="mb-3">
                 <button type="submit" class="btn btn-primary">Créer le compte</button>
             </div>
         </form>
