--- a/Streaming/templates/html/index.html
+++ b/Streaming/templates/html/index.html
@@ -10,7 +10,7 @@
     <!-- Navbar -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="#">Streaming App</a>
+			<a class="navbar-brand" href="{% url 'home:home' %}">Streaming App</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -27,9 +27,10 @@
 					</li>
 				</ul>
 				<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+					{%if session %}
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							Utilisateur
+							{{session}}
 						</a>
 						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<li><a class="dropdown-item" href="#">Profile</a></li>
@@ -38,6 +39,7 @@
 							<li><a class="dropdown-item" href="{% url 'home:home' %}">Se déconnerter</a></li>
 						</ul>
 					</li>
+					{%endif%}
 				</ul>
 			</div>
 		</div>
