--- a/Streaming/home/templates/principal.html
+++ b/Streaming/home/templates/principal.html
@@ -7,6 +7,16 @@
 
 <div class="row">
     <div class="col">
+        {% if errors %}
+        <div class="alert alert-danger mt-3">
+            <ul>
+                {% for error in errors %}
+                <li>{{error}}</li>
+                {% endfor %}
+            </ul>
+
+        </div>
+        {%endif%}
         <h2>Clients</h2>
         <table class="table">
             <thead>
@@ -16,23 +26,34 @@
                 <th>Prénom</th>
                 <th>Sexe</th>
                 <th>Courriel</th>
+                <th>Actions</th>
             </tr>
             </thead>
             <tbody>
             {% for client in clients %}
             <tr>
-                <td><input type="checkbox"></td>
+                <td>
+                    <input type="checkbox">
+                </td>
                 <td>{{client.nom}}</td>
                 <td>{{client.prenom}}</td>
                 <td>{{client.sexe}}</td>
                 <td>{{client.courriel}}</td>
+                <td>
+                    <a class="btn btn-primary" href="{%url 'home:modifier_client' client.courriel %}">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+                            <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+                        </svg>
+                    </a>
+                </td>
             </tr>
             {% endfor %}
             </tbody>
         </table>
+        {%if session.typeacces == '1'%}
         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createClientModal">Créer un client</button>
-        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modifyClientModal">Modifier un client sélectionné</button>
         <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteClientModal">Supprimer un client sélectionné</button>
+        {%endif%}
     </div>
 
 </div>
@@ -61,9 +82,11 @@
             {%endfor%}
             </tbody>
         </table>
+        {%if session.typeacces == '1'%}
         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createFilmModal">Ajouter un film</button>
         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modifyFilmModal">Modifier un film sélectionné</button>
         <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteFilmModal">Supprimer un film sélectionné</button>
+        {%endif%}
     </div>
 
 </div>
@@ -78,27 +101,38 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form>
+                <form action="{% url 'home:creation_client' %}" method="post">
+                    {% csrf_token %}
                     <div class="mb-3">
-                        <label for="clientFirstName" class="form-label">Prénom</label>
-                        <input type="text" class="form-control" id="clientFirstName" required>
+                        <label for="prenomclient" class="form-label">Prénom</label>
+                        <input type="text" class="form-control" id="prenomclient" name="prenomclient" required>
                     </div>
                     <div class="mb-3">
-                        <label for="clientLastName" class="form-label">Nom</label>
-                        <input type="text" class="form-control" id="clientLastName" required>
+                        <label for="nomclient" class="form-label">Nom</label>
+                        <input type="text" class="form-control" id="nomclient" name="nomclient" required>
                     </div>
                     <div class="mb-3">
-                        <label for="clientEmail" class="form-label">Courriel</label>
-                        <input type="email" class="form-control" id="clientEmail" aria-describedby="emailHelp" required>
+
+                        <label for="sex" class="form-label">Sexe</label>
+                        <select class="form-control" id="sex" name="sex" required>
+                            <option value="F">Femme</option>
+                            <option value="M">Homme</option>
+                            <option value="A">Autre</option>
+                        </select>
                     </div>
                     <div class="mb-3">
-                        <label for="clientPassword" class="form-label">Mot de passe</label>
-                        <input type="password" class="form-control" id="clientPassword" required>
+                        <label for="email" class="form-label">Courriel</label>
+                        <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" required>
                     </div>
                     <div class="mb-3">
-                        <label for="clientPasswordConfirmation" class="form-label">Confirmer mot de passe</label>
-                        <input type="password" class="form-control" id="clientPasswordConfirmation" required>
+                        <label for="Password" class="form-label">Mot de passe</label>
+                        <input type="password" class="form-control" id="Password" name="Password" required>
                     </div>
+                    <div class="mb-3">
+                        <label for="PasswordConfirmation" class="form-label">Confirmer mot de passe</label>
+                        <input type="password" class="form-control" id="PasswordConfirmation" name="PasswordConfirmation" required>
+                    </div>
+
                     <button type="submit" class="btn btn-primary">Create</button>
                 </form>
             </div>
@@ -107,41 +141,7 @@
 </div>
 
 
-<div class="modal fade" id="modifyClientModal" tabindex="-1" aria-labelledby="modifyClientModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="modifyClientModalLabel">Modify Client</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form>
-                    <div class="mb-3">
-                        <label for="modifiedClientFirstName" class="form-label">First Name</label>
-                        <input type="text" class="form-control" id="modifiedClientFirstName" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="modifiedClientLastName" class="form-label">Last Name</label>
-                        <input type="text" class="form-control" id="modifiedClientLastName" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="modifiedClientEmail" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="modifiedClientEmail" aria-describedby="emailHelp" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="modifiedClientPassword" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="modifiedClientPassword" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="clientPasswordConfirmationConfirmation" class="form-label">Confirmer mot de passe</label>
-                        <input type="password" class="form-control" id="clientPasswordConfirmationConfirmation" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Save Changes</button>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
+
 
 
 <div class="modal fade" id="deleteClientModal" tabindex="-1" aria-labelledby="deleteClientModalLabel" aria-hidden="true">
@@ -158,7 +158,7 @@
                     <input type="hidden" name="client_id" id="delete-client-id">
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                        <button type="submit" class="btn btn-danger">Delete</button>
+                        <button type="button" class="btn btn-danger">Delete</button>
                     </div>
                 </form>
             </div>
@@ -176,6 +176,7 @@
             </div>
             <div class="modal-body">
                 <form>
+                    {% csrf_token %}
                     <div class="mb-3">
                         <label for="FilmFirstName" class="form-label">Nom</label>
                         <input type="text" class="form-control" id="FilmFirstName" required>
@@ -209,6 +210,7 @@
             </div>
             <div class="modal-body">
                 <form>
+                    {% csrf_token %}
                     <div class="mb-3">
                         <label for="ModifyFilmFirstName" class="form-label">Nom</label>
                         <input type="text" class="form-control" id="ModifyFilmFirstName" required>
@@ -248,7 +250,7 @@
                     <input type="hidden" name="Film_id" id="delete-Film-id">
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                        <button type="submit" class="btn btn-danger">Delete</button>
+                        <button type="button" class="btn btn-danger">Delete</button>
                     </div>
                 </form>
             </div>
